Fixed Button spacing

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -24,6 +24,7 @@
 
   .header-left {
     margin-top: 0px;
+    margin-bottom: 02rem;
   }
 }
 
